# Tensorflow-Workshop

./: .gitignore  README.md  pyproject.toml
Examples/: 1-Perceptron.ipynb
Tensorflow-Core/: 1-Basics.ipynb  3-automatic-Differentiate.ipynb  4-Basic-Linear Regresion Model.ipynb  5-CNN.ipynb  6_convolutions.ipynb  7_structured_data.ipynb  8_structured_data.ipynb
Tensorflow-JS/iris/: index.html
Tensorflow-JS/mobilenet/: index.html
Tensorflow-JS/python2js/: index.html  model.ipynb
Tensorflow-JS/train-model/: canvas.js  fashion-classifier.js  index.js.html  script.js
