[tool.poetry]
name = "tensorflow-workshop"
version = "0.1.0"
description = ""
authors = ["Henry Ruiz"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "1.18.0"
jupyterlab = "^2.2.8"
tensorflow = "^2.3.1"
tensorflow-datasets = "^3.2.1"
ipywidgets = "^7.5.1"
pydub = "^0.24.1"
jupyter = "^1.0.0"
librosa = "^0.8.0"
pandas = "^1.1.3"
sklearn = "^0.0"
matplotlib = "^3.3.2"
pydot = "^1.4.1"
graphviz = "^0.14.2"
pydotplus = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
